--- a/colmap_localization/explain_things/explain_error.ipynb
+++ b/colmap_localization/explain_things/explain_error.ipynb
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the distance of two cameras with 3 pixels difference is 0.08420006238708715\n"
+      "the distance of two cameras with 10 pixels difference is 0.14367669126758428\n"
      ]
     },
     {
@@ -160,7 +160,7 @@
    ],
    "source": [
     "plt.imshow(draw_two_set_points(imgPoints_1, imgPoints_2))\n",
-    "distance = tvec_2 - tvec_1\n",
+    "distance = np.dot(pose_2[0:3,0:3],tvec_2.reshape(3)) - np.dot(pose_1[0:3,0:3],tvec_1.reshape(3))\n",
     "print(\"the distance of two cameras with\", offset, \"pixels difference is\", np.linalg.norm(distance))"
    ]
   },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
      "output_type": "stream",
      "text": [
       "position of the camera : [[ 0.59418075 -0.22017815  8.00676856]]\n",
-      "the distance of two cameras with 10 pixels difference is 0.16263827033821568\n"
+      "the distance of two cameras with 10 pixels difference is 1.857438594211325\n"
      ]
     },
     {
@@ -299,7 +299,7 @@
     "pose_3, tvec_3 = test_image_pts(objPoints, imgPoints_3, K)\n",
     "\n",
     "plt.imshow(draw_two_set_points(imgPoints_1, imgPoints_3))\n",
-    "distance = tvec_3 - tvec_1\n",
+    "distance = np.dot(pose_3[0:3,0:3],tvec_3.reshape(3)) - np.dot(pose_1[0:3,0:3],tvec_1.reshape(3))\n",
     "print(\"the distance of two cameras with\", offset, \"pixels difference is\", np.linalg.norm(distance))"
    ]
   },
